# napari-ometiff

./: LICENSE  README.md  setup.cfg  tox.ini
src/napari_ometiff/: _reader.py  napari.yaml
src/napari_ometiff/_tests/: test_reader.py
